docs/api/qiskit/0.45/qiskit.providers.models.JobStatus.mdx
---
title: JobStatus
description: API reference for qiskit.providers.models.JobStatus
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.JobStatus
---

# JobStatus

<Class id="qiskit.providers.models.JobStatus" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/providers/models/jobstatus.py" signature="qiskit.providers.models.JobStatus(job_id, status, status_msg, **kwargs)">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.12)")

  Model for JobStatus.

  ### job\_id

  <Attribute id="qiskit.providers.models.JobStatus.job_id" name="job_id">
    backend job\_id.

    **Type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")
  </Attribute>

  ### status

  <Attribute id="qiskit.providers.models.JobStatus.status" name="status">
    status of the job.

    **Type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")
  </Attribute>

  ### status\_msg

  <Attribute id="qiskit.providers.models.JobStatus.status_msg" name="status_msg">
    status message.

    **Type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")
  </Attribute>

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.JobStatus.from_dict" name="from_dict" signature="classmethod from_dict(data)">
    Create a new JobStatus object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")) – A dictionary representing the JobStatus to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.JobStatus.to_dict "qiskit.providers.models.JobStatus.to_dict").

    **Returns**

    The `JobStatus` from the input dictionary.

    **Return type**

    [JobStatus](#qiskit.providers.models.JobStatus "qiskit.providers.models.JobStatus")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.JobStatus.to_dict" name="to_dict" signature="to_dict()">
    Return a dictionary format representation of the JobStatus.

    **Returns**

    The dictionary form of the JobStatus.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")
  </Function>
</Class>

