docs/api/qiskit/1.4/qiskit.providers.models.JobStatus.mdx
---
title: JobStatus (v1.4)
description: API reference for qiskit.providers.models.JobStatus in qiskit v1.4
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.JobStatus
---

# JobStatus

<Class id="qiskit.providers.models.JobStatus" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/jobstatus.py#L18-L77" signature="qiskit.providers.models.JobStatus(job_id, status, status_msg, **kwargs)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.14)")

  Model for JobStatus.

  ### job\_id

  <Attribute id="qiskit.providers.models.JobStatus.job_id">
    backend job\_id.

    **Type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")
  </Attribute>

  ### status

  <Attribute id="qiskit.providers.models.JobStatus.status">
    status of the job.

    **Type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")
  </Attribute>

  ### status\_msg

  <Attribute id="qiskit.providers.models.JobStatus.status_msg">
    status message.

    **Type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")
  </Attribute>

  <Admonition title="Deprecated since version 1.4" type="danger">
    The class `qiskit.providers.models.jobstatus.JobStatus` is deprecated as of qiskit 1.4. It will be removed in the 2.0 release. The models in `qiskit.providers.models` and related objects are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires these representations it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.JobStatus.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/jobstatus.py#L45-L57" signature="from_dict(data)" modifiers="classmethod">
    Create a new JobStatus object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")) – A dictionary representing the JobStatus to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.JobStatus.to_dict "qiskit.providers.models.JobStatus.to_dict").

    **Returns**

    The `JobStatus` from the input dictionary.

    **Return type**

    [JobStatus](#qiskit.providers.models.JobStatus "qiskit.providers.models.JobStatus")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.JobStatus.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/jobstatus.py#L59-L71" signature="to_dict()">
    Return a dictionary format representation of the JobStatus.

    **Returns**

    The dictionary form of the JobStatus.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")
  </Function>
</Class>

